--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="rockpaper.js" defer></script>
+    <script src="style.js" defer></script>
 </head>
 <body style="font-size: larger;">
     <div class = "buttons">
